--- a/plantsuwa/app/assets/stylesheets/custom_shared.css
+++ b/plantsuwa/app/assets/stylesheets/custom_shared.css
@@ -839,7 +839,9 @@ h3.or-block {
   margin-bottom: 2px;
   font-weight: 700;
   font-size: 10px;
+  cursor: pointer;
 }
+
 
 .side-nav-tiny {
   display: none;
