--- a/plantsuwa/app/assets/stylesheets/custom_white.css
+++ b/plantsuwa/app/assets/stylesheets/custom_white.css
@@ -478,3 +478,7 @@ h3.or-block {
   border: 1px solid rgb(170, 170, 170);
   background: rgb(204, 204, 204);
 }
+
+.side-nav > ul > a > li:active {
+  background: #268BFF;
+}
