--- a/plantsuwa/app/views/current_plants/show.html.erb
+++ b/plantsuwa/app/views/current_plants/show.html.erb
@@ -299,7 +299,7 @@
 		marker1 = new google.maps.Marker({
 			position: location1,
 			map: map,
-			title: '' + <%=  @current_plant.lat1.to_json %>,
+			title: '<%=  @current_plant.lat1.to_json %>',
 			animation: google.maps.Animation.DROP
 		})
 		
