--- a/plantsuwa/app/views/current_plants/index.html.erb
+++ b/plantsuwa/app/views/current_plants/index.html.erb
@@ -11,11 +11,7 @@
 	<p><i class="fa fa-cubes"></i>&nbsp;&nbsp;Type</p>    
 <% end %>
 
-<% if is_admin? %>
-<div class="index-banner"></div>
-<% end %>
-
-<div class="index-banner" id="index-banner-controls" style="<% if is_admin? %>top: 80px<% end %>">
+	<div class="index-banner" id="index-banner-controls">
 		<ul style="margin-top: 2px">
 			<span class="over-600">
 				<li style="font-weight: 700">View:</li>
@@ -55,10 +51,6 @@
 </div>
 <div style="margin-top: 19px"></div>
 
-<% if is_admin? %>
-	<div style="height: 30px"></div>
-<% end %>
-
 <div class="side-nav">
 	<ul>
 		<% @grouped_plants.each do |h| %>
@@ -94,10 +86,10 @@
 </div>
 
 <% if @view == "grid" %>
-	<div id="plants-list" class="plants-grid-container" style="margin-right: 30px">
+	<div id="plants-list" class="plants-grid-container">
 		<% @grouped_plants.each do |h| %>
 			<% if !h.last.empty? %>
-				<div class="list-header" style="margin-right: 0" id="header-<%= h.first.gsub(/[^a-zA-Z0-9]/, '') %>"><%= h.first %></div>
+				<div class="list-header" id="header-<%= h.first.gsub(/[^a-zA-Z0-9]/, '') %>"><%= h.first %></div>
 				<%= render partial: "current_plant_grid", collection: h.last, as: :current_plant, locals: { sort_by: @sort_by } %>
 			<% end %>
 		<% end %>
@@ -141,7 +133,7 @@
 
   function jump_to(element) {
   	var element = $(element);
-  	$('html,body').animate({ scrollTop: element.offset().top - 82 }, 500);
+  	$(window).scrollTop(element.offset().top - 82);
   };
 
 
