--- a/plantsuwa/app/views/current_plants/_form_admin.html.erb
+++ b/plantsuwa/app/views/current_plants/_form_admin.html.erb
@@ -68,6 +68,11 @@
  			  <td class="lat"><%= f.input :lat1, label: 'Latitude', hint: 'Use Google Maps.'%></td>
  			  <td class="lng"><%= f.input :lng1, label: 'Longitude', hint: 'Needs a lat and a long' %></td>
  		  </tr></table>
+		  
+  		<div id="map-hide">
+  		  		<div  id="map-canvas" style="height: 300px; width: 500px; margin: 10px"></div>
+  		</div>
+		  
  		  <a id="show_more" onClick="show_more()" style="cursor: pointer; font-weight: bold;"><i>Show More Locations</i></a>
   		  <a id="show_less" onClick="show_less()" style="cursor: pointer; font-weight: bold;" class="invisible"><i>Show Less Locations</i></a>
  		  <div id="more_locations" class="invisible">
@@ -157,3 +162,132 @@
 
 <% end %>
 <br/>
+
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3key={AIzaSyAlFdDKUoiH9BBWXsP3jphe1XhzeBde9IM}&sensor=true">
+</script>
+
+<script>
+	var map;
+	var geocoder;
+
+      function initialize() {
+		  var bounds = new google.maps.LatLngBounds();
+		  var location1 = new google.maps.LatLng(<%= @current_plant.lat1.to_json %> , <%= @current_plant.lng1.to_json %>);
+		  var location2 = new google.maps.LatLng(<%= @current_plant.lat2.to_json %> , <%= @current_plant.lng2.to_json %>);
+		  var location3 = new google.maps.LatLng(<%= @current_plant.lat3.to_json %> , <%= @current_plant.lng3.to_json %>);
+		  var location4 = new google.maps.LatLng(<%= @current_plant.lat4.to_json %> , <%= @current_plant.lng4.to_json %>);
+		  var location5 = new google.maps.LatLng(<%= @current_plant.lat5.to_json %> , <%= @current_plant.lng5.to_json %>);
+		  var location6 = new google.maps.LatLng(<%= @current_plant.lat6.to_json %> , <%= @current_plant.lng6.to_json %>);
+		  var uwa = new google.maps.LatLng(-31.979577323296006 , 115.81778526306152);
+		  
+		  
+          var mapOptions = {
+          center: uwa,
+		  mapTypeId: google.maps.MapTypeId.HYBRID,
+		  maxZoom: 16	
+        };
+		  
+		
+        map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+		google.maps.event.trigger(map, 'resize');
+		
+		var marker1, marker2, marker3, marker4, marker5, marker6;
+		
+		<% if not @current_plant.lat1.blank? and not @current_plant.lng1.blank? %>
+		marker1 = new google.maps.Marker({
+			position: location1,
+			map: map,
+			title: '' + <%=  @current_plant.lat1.to_json %>,
+			animation: google.maps.Animation.DROP
+		})
+		
+    	var info = "<div style='color: black'>Location:" + <%=  @current_plant.lat1.to_json %> + " </div>" ;
+
+  		var infowindow = new google.maps.InfoWindow({
+  			content: info
+  		});
+		google.maps.event.addDomListener(marker1, 'click', function() {
+			infowindow.open(map,marker1);
+		});
+		
+		marker1.setMap(map);
+		bounds.extend(marker1.getPosition());
+		<% end %>
+		<% if not @current_plant.lat2.blank? and not @current_plant.lng2.blank? %>
+		marker2 = new google.maps.Marker({
+			position: location2,
+			map: map,
+			animation: google.maps.Animation.DROP
+		})
+		
+		marker2.setMap(map);
+		bounds.extend(marker2.getPosition());
+		<% end %>
+		<% if not @current_plant.lat3.blank? and not @current_plant.lng3.blank? %>
+		marker3 = new google.maps.Marker({
+			position: location3,
+			map: map,
+			animation: google.maps.Animation.DROP
+		})
+		
+		marker3.setMap(map);
+		bounds.extend(marker3.getPosition());
+		<% end %>
+		<% if not @current_plant.lat4.blank? and not @current_plant.lng4.blank? %>
+		marker4 = new google.maps.Marker({
+			position: location4,
+			map: map,
+			animation: google.maps.Animation.DROP
+		})
+		
+		marker4.setMap(map);
+		bounds.extend(marker4.getPosition());
+		<% end %>
+		<% if not @current_plant.lat5.blank? and not @current_plant.lng5.blank? %>
+		marker5 = new google.maps.Marker({
+			position: location5,
+			map: map,
+			animation: google.maps.Animation.DROP
+		})
+		
+		marker5.setMap(map);
+		bounds.extend(marker5.getPosition());
+		<% end %>
+		<% if not @current_plant.lat6.blank? and not @current_plant.lng6.blank? %>
+		marke6 = new google.maps.Marker({
+			position: location6,
+			map: map,
+			animation: google.maps.Animation.DROP
+		})
+		
+		marker6.setMap(map);
+		bounds.extend(marker6.getPosition());
+		<% end %>
+		
+		map.fitBounds(bounds);
+	
+	  google.maps.event.addListener(map, 'click', function (event) {
+		  placeMarker(event.latLng);
+	  });
+	  
+	}
+          
+      google.maps.event.addDomListener(window, 'load', initialize);
+	  
+		  
+		  
+		  function placeMarker(location) {
+		    var marker = new google.maps.Marker({
+		      position: location,
+		      map: map,
+		    });
+		    var infowindow = new google.maps.InfoWindow({
+		      content: '<div style='+'color:black;'+'> Latitude: ' + location.lat() + '<br>Longitude: ' + location.lng() + '</div>'
+		    });
+		    infowindow.open(map,marker);
+		  }
+
+	  
+	  
+</script>
+
