--- a/plantsuwa/app/views/layouts/application.html.erb
+++ b/plantsuwa/app/views/layouts/application.html.erb
@@ -8,6 +8,14 @@
     <title><%= full_title(yield(:title)).html_safe %></title>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+	<link rel="apple-touch-icon" type="image/png" href="#{Rails.root}/public/apple-touch-icon.png">
+	<link rel="apple-touch-icon" type="image/png" sizes="60x60" href="#{Rails.root}/public/apple-touch-icon-60x60.png">
+	<link rel="apple-touch-icon" type="image/png" sizes="76x76" href="#{Rails.root}/public/apple-touch-icon-76x76.png">
+	<link rel="apple-touch-icon" type="image/png" sizes="120x120" href="#{Rails.root}/public/apple-touch-icon-120x120.png">
+	<link rel="apple-touch-icon" type="image/png" sizes="156x156" href="#{Rails.root}/public/apple-touch-icon-156x156.png">
+	<link rel="apple-touch-icon" type="image/png" sizes="144x144" href="#{Rails.root}/public/apple-touch-icon-144x144.png">
+	<link rel="apple-touch-icon" type="image/png" sizes="114x114" href="#{Rails.root}/public/apple-touch-icon-114x114.png">	
   	<!-- Bootstrap -->
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 	  <%= javascript_include_tag "addtohomescreen" %>
