--- a/plantsuwa/app/views/layouts/application.html.erb
+++ b/plantsuwa/app/views/layouts/application.html.erb
@@ -11,12 +11,14 @@
     <%= favicon_link_tag 'favicon_new.ico' %>
 
   	<link rel="apple-touch-icon" type="image/png" href="#{Rails.root}/public/apple-touch-icon.png">
+	<link rel="apple-touch-icon-precomposed" type="image/png" href="#{Rails.root}/public/apple-touch-icon.png">
   	<link rel="apple-touch-icon" type="image/png" sizes="60x60" href="#{Rails.root}/public/apple-touch-icon-60x60.png">
   	<link rel="apple-touch-icon" type="image/png" sizes="76x76" href="#{Rails.root}/public/apple-touch-icon-76x76.png">
   	<link rel="apple-touch-icon" type="image/png" sizes="120x120" href="#{Rails.root}/public/apple-touch-icon-120x120.png">
   	<link rel="apple-touch-icon" type="image/png" sizes="156x156" href="#{Rails.root}/public/apple-touch-icon-156x156.png">
   	<link rel="apple-touch-icon" type="image/png" sizes="144x144" href="#{Rails.root}/public/apple-touch-icon-144x144.png">
   	<link rel="apple-touch-icon" type="image/png" sizes="114x114" href="#{Rails.root}/public/apple-touch-icon-114x114.png">	
+	
   	<!-- Bootstrap -->
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 	  <%= javascript_include_tag "addtohomescreen" %>
